# meta-secret-node

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile-builder  Dockerfile-cli  README.md  builder.sh
.github/: dependabot.yml
.github/workflows/: README.md  cargo-build-component.yml  cli.yml  core.yml  deployment.yml  docker-cli.yml  docker-vault-server.yml  mobile.yml  release-cli.yml  testing.yml  unit-test.yml  vault-docker.yml  vault-server.yml  web-cli.yml
.github/workflows/actions/project-cache/: action.yml
build-scripts/: build-docker.sh  docker-build-vault-server.sh
cli/: Cargo.toml  Dockerfile  Makefile  build.rs  config.yaml
cli/secret/: shared-secret-1.json  shared-secret-2.json
cli/src/: main.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/crypto/: encoding.rs  key_pair.rs  keys.rs
core/src/shared_secret/: mod.rs  shared_secret.rs
core/src/shared_secret/data_block/: common.rs  encrypted_data_block.rs  mod.rs  plain_data_block.rs  shared_secret_data_block.rs
dashboard/: Cargo.toml
dashboard/src/: main.rs
docs/programming/: rust.md
mobile/: README.md
mobile/core-swift-lib/: Cargo.toml  Package.swift
mobile/core-swift-lib/.build/: manifest.db
mobile/core-swift-lib/Sources/: Greeting.swift
mobile/core-swift-lib/src/: Swift_to_rust.rs  lib.rs
mobile/test-app/: Package.swift  README.md
mobile/test-app/Sources/test-app/: main.swift
mobile/test-app/Tests/test-appTests/: test_appTests.swift
mobile/testLib/: Package.swift  README.md
mobile/testLib/Sources/testLib/: testLib.swift
mobile/testLib/Tests/testLibTests/: testLibTests.swift
vault/vault-cli/: Cargo.toml
vault/vault-server/: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  request.sh  run-vault-server.sh
vault/vault-server/app/: Cargo.toml  Rocket.toml  build.rs  mongodb-config.json
vault/vault-server/app/src/: main.rs
vault/vault-server/build_scripts/: docker-build.sh
vault/vault-server/examples/: accept.json  candidate_user_signature.json  member_user_signature.json  request.sh
vault/vault-server/lib/: Cargo.toml
vault/vault-server/lib/src/: db.rs  lib.rs
vault/vault-server/lib/src/api/: api.rs
vault/vault-server/lib/src/crypto/: crypto.rs  digital_signature.rs  keys.rs  mod.rs
vault/vault-server/lib/src/restful_api/: basic.rs  cloud.rs  commons.rs  membership.rs  mod.rs  password.rs  register.rs  vault.rs
vault/vault-server/lib/tests/: cluster_it.rs  password_distribution_it.rs  vault_server.rs  vault_server_it.rs
vault/vault-server/lib/tests/testing/: mod.rs
vault/vault-server/meta_test/: Cargo.toml
vault/vault-server/meta_test/src/: lib.rs  test_framework.rs  test_infra.rs  test_spec.rs
vault/vault-server/meta_test/tests/: cloud_it.rs  cluster_it.rs  password_distribution_it.rs  vault_server_it.rs
vault/vault-server/src/: Db.rs  api.rs  crypto.rs  db.rs  main.rs
vault/vault-server/src/crypto/: crypto.rs  digital_signature.rs  keys.rs  mod.rs
vault/vault-server/src/restful_api/: commons.rs  membership.rs  mod.rs  password.rs  register.rs  vault.rs
vault/vault-server/tests/: vault_server.rs
web-cli/: Dockerfile-builder  Makefile  build.sh  builder.sh
web-cli/ui/: index.html  index.js  package.json  vite.config.ts
web-cli/ui/public/: 404.html
web-cli/ui/src/: App.vue  main.ts
web-cli/ui/src/common/: DbUtils.ts
web-cli/ui/src/components/: Choice.vue  Documentation.vue  NavBar.vue  SharedSecret.vue
web-cli/ui/src/components/vault/: Devices.vue  Registration.vue  Secrets.vue
web-cli/ui/src/router/: index.ts
web-cli/ui/src/stores/: app-state.ts  counter.ts
web-cli/ui/src/views/: AboutView.vue  ContactView.vue  HomeView.vue  RecoverView.vue  SplitView.vue  VaultView.vue
web-cli/wasm/: Cargo.toml
web-cli/wasm/src/: commit_log.rs  db.rs  lib.rs  security.rs
web-cli/web-cli-ui/: index.html  index.js  package.json
web-cli/web-cli-wasm/: Cargo.toml
web-cli/web-cli-wasm/src/: lib.rs
