[package]
name = "meta-secret-cli"
version = "1.1.0"
edition = "2021"

[dependencies]
#meta-secret-core = { path = "../core" }
meta-secret-core = "1.1.3"
clap = { version = "3.2.6", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0.33"

serde = "1.0.137"
serde_json = "1.0.81"
serde_yaml = "0.9.10"
