[package]
name = "meta-secret-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meta_secret_core"

[dependencies]
ed25519-dalek = { version = "=1.0.1" }

#https://github.com/dsprenkels/sss-rs
shamirsecretsharing = "0.1.5"
solana-sdk = "1.11.1"

serde = "1.0.137"
serde_json = "1.0.81"
serde_bytes = "0.11.6"
serde-big-array = "0.4.1"

base64 = "0.13.0"
