[package]
name = "meta-secret-core"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Meta Secret core module"
homepage = "https://github.com/meta-secret/meta-secret-node/tree/main/core"
documentation = "https://github.com/meta-secret/meta-secret-node/blob/main/core/README.md"
repository = "https://github.com/meta-secret/meta-secret-node/blob/main/core/README.md"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "meta_secret_core"

[dependencies]
ed25519-dalek = { version = "1.0.1" }

#https://github.com/dsprenkels/sss-rs
shamirsecretsharing = "0.1.5"

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_bytes = "0.11.7"
serde-big-array = "0.4.1"

base64 = "0.13.0"

qrcode-generator = "4.1.2"
rqrr = "0.5.1"
image = "0.24.3"
