[package]
name = "meta-secret-vault-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

testcontainers = "0.14.0"
mongodb = "2.3.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = [ "macros" ] }
pretty_env_logger = "0.4.0"