[package]
name = "meta-secret-vault-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

ed25519-dalek = { version = "=1.0.1" }

mongodb = "2.3.0"

[dev-dependencies]
testcontainers = "0.14.0"
tokio = { version = "1.20.1", features = [ "macros" ] }
pretty_env_logger = "0.4.0"
