[package]
name = "meta-secret-vault-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

ed25519-dalek = { version = "1.0.1" }
base64 = "0.13.0"
rand = "0.7.0"
openssl = "0.10.41"

mongodb = "2.3.0"

[dev-dependencies]
testcontainers = "0.14.0"
tokio = { version = "1.20.1", features = [ "macros" ] }
pretty_env_logger = "0.4.0"
