[package]
name = "meta-secret-vault-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

meta-secret-vault-server-lib = { path = "../lib" }
meta-secret-core = "1.3.1"

rocket = { version = "0.5.0-rc.2", features = ["json"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ed25519-dalek = { version = "1.0" }
base64 = "0.13"
rand = "0.7"
openssl = "0.10"

mongodb = "2.3"

[dev-dependencies]
testcontainers = "0.14"
pretty_env_logger = "0.4.0"

