[package]
name = "meta-test"
version = "0.1.0"
edition = "2021"

[dependencies]
meta-secret-core = "1.3.3"
meta-secret-vault-server-lib = { path = "../lib" }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-log = "0.1.3"

rocket = { version = "0.5.0-rc.2", features = ["json"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

ed25519-dalek = "1.0.1"
crypto_box = "0.8.1"
base64 = "0.20.0-alpha.1"
rand = "0.7"
openssl = "0.10"

async-trait = "0.1"

mongodb = "2.3.0"

hex = "0.4"

testcontainers = "0.14"
tokio = { version = "1.20.1", features = ["macros"] }
pretty_env_logger = "0.4.0"


